.collapse-show fix

--- a/less/theme-helpers.less
+++ b/less/theme-helpers.less
@@ -209,7 +209,7 @@ p.date {
 // Hide/show content in collapse links
 // -----------------------------------
 .collapsed-show {
-    display: none;
+    display: none !important;
     color: @brand-green;
 }
 .collapsed-hide {
